--- a/templates/request.xml
+++ b/templates/request.xml
@@ -1,1 +1,19 @@
-<?xml version="1.0" encoding="UTF-8"?><osm-script><query type="way"> <has-kv k="building" /> <has-kv k="building:levels" modv="not" regv="[0-9]" /> <bbox-query s="<%= south %>" w="<%= west %>" n="<%= north %>" e="<%= east %>"/><!--this is auto-completed with the current map view coordinates.--> </query> <!-- added by auto repair --> <union> <item/> <recurse type="down"/> </union> <print mode="meta"/></osm-script>
+<?xml version="1.0" encoding="UTF-8"?>
+<osm-script>
+    <union>
+        <query type="way">
+            <has-kv k="building" v="yes" />
+            <bbox-query s="<%= south %>" w="<%= west %>" n="<%= north %>" e="<%= east %>"/>
+        </query>
+        <query type="way">
+            <has-kv k="building" />
+            <has-kv k="building:levels" modv="not" regv="[0-9]" />
+            <bbox-query s="<%= south %>" w="<%= west %>" n="<%= north %>" e="<%= east %>"/>
+        </query>
+    </union>
+    <union>
+        <item/>
+        <recurse type="down"/>
+    </union>
+    <print mode="meta"/>
+</osm-script>
